# mail_10_minutes_test

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
config/: db.py
models/: email.py  emailData.py  email_data.py  index.py
routes/: email.py  emailData.py  email_data.py  index.py
schemas/: user.py
